rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: hue-intern
  name: hue-intern
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hue-intern
  strategy:
    canary:
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 1 # delay starting analysis run until setWeight: 40%
        args:
        - name: hue-intern-service
          value: hue-intern-service.default.svc.cluster.local
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 50
      - pause:
          duration: 60
  template:
    metadata:
      labels:
        app: hue-intern
    spec:
      containers:
      - image: europe-west4-docker.pkg.dev/stage-kora-dokbua/hue-intern/hue-intern:0a608bd17bc287bab7301a5d6f6d67fbc08bea8c
        imagePullPolicy: Always
        name: hue-intern
        ports:
        - containerPort: 3000
          name: grpc
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
