deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hue-intern
  labels:
    app: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hue-intern
  template:
    metadata:
      labels:
        app: hue-intern
    spec:
      containers:
      - name: demo
        image: europe-west4-docker.pkg.dev/stage-kora-dokbua/hue-intern/hue-intern:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hue-intern-service
  labels:
    app: hue-intern
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: hue-intern
  type: NodePort
