service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: hue-intern
#   name: hue-intern
#   namespace: default
# spec:
#   allocateLoadBalancerNodePorts: true
#   clusterIP: 34.118.233.243
#   clusterIPs:
#   - 34.118.233.243
#   externalTrafficPolicy: Cluster
#   internalTrafficPolicy: Cluster
#   ipFamilies:
#   - IPv4
#   ipFamilyPolicy: SingleStack
#   ports:
#   - nodePort: 31582
#     port: 80
#     protocol: TCP
#     targetPort: 3000
#   selector:
#     app: hue-intern
#   sessionAffinity: None
#   type: LoadBalancer
# # ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hue-intern-service
# spec:
#   selector:
#     app: hue-intern
#   ports:
#     - port: 80
#       targetPort: 3000
#   type: LoadBalancer
# ---

# apiVersion: v1
# kind: Service
# metadata:
#   cloud.google.com/app-protocols: '{"proxy-grpc":"HTTP2"}'
#   name: hue-intern-service
#   labels:
#     app: hue-intern
# spec:
#   ports:
#   - port: 80
#     protocol: TCP
#     targetPort: 3000
#     name: proxy-grpc
#   selector:
#     app: hue-intern
#   type: NodePort
# ---
apiVersion: v1
kind: Service
metadata:
  name: hue-intern-service
  labels:
    app: hue-intern
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: hue-intern
  type: NodePort
